2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* prescale relevant changes by Chris
	* add rcmsStateNotifier from xdaq2rc package to inform run control
	of self-triggered transition into target state

2007-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* no tag :(
	* change to asynchronous state model
	* incorporate prescale relevant code from Chris
	* missing from the code is the asynchronous notification of run
	control (function manager) of the arrival in the target
	state. To do this, the xdaq2rc library will be employed, which
	will be available in xdaq 3.8.
	
